# RTA

./: Dockerfile  Makefile  app.py  perceptron.py  pyproject.toml  requirements.txt
